insta logo added

--- a/Kurs/Views/Shared/_Layout.cshtml
+++ b/Kurs/Views/Shared/_Layout.cshtml
@@ -50,6 +50,9 @@
                 <a href="#">Back to top</a>
             </p>
             <p class="mb-1">Подпишитесь на наш инстаграм! Там мы регулярно выкладываем интересные работы</p>
+            <a href="https://www.instagram.com/bergwolfe_team/?hl=ru" class="soc" target="_blank">
+                <img src="~/img/insta.jpg" id="bx_3218110189_26851">
+            </a>
         </div>
     </footer>
         
