social media links added

--- a/Kurs/Views/Shared/_Layout.cshtml
+++ b/Kurs/Views/Shared/_Layout.cshtml
@@ -19,9 +19,8 @@
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Как с нами связаться</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Наш твиттер</a></li>
-                            <li><a href="#" class="text-white">Еще есть вк</a></li>
-                            <li><a href="#" class="text-white">Ну и почта там на всякий</a></li>
+                            <li><a href="https://www.instagram.com/bergwolfe_team/?hl=ru" class="text-white" target="_blank">Наш Instagram</a></li>
+                            <li><a href="https://vk.com/bergwolfe" class="text-white" target="_blank">Наш Vk</a></li>
                         </ul>
                     </div>
                 </div>
