--- a/Kurs/Views/Themes/List.cshtml
+++ b/Kurs/Views/Themes/List.cshtml
@@ -7,7 +7,7 @@
         foreach (var theme in Model.themes)
         {
             <div class="col-lg-4">
-                <img class="img-thumbnail" src="@theme.img" alt="@theme.name"/>
+                <img class="img-thumbnail" src="@theme.img" alt="@theme.name" style="width:650px; height:400px;"/>
                 <h5>@theme.name</h5>
                 <p>@theme.shortDescription</p>
                 <p>@theme.level</p>
