--- a/Kurs/Views/Shared/_Layout.cshtml
+++ b/Kurs/Views/Shared/_Layout.cshtml
@@ -43,18 +43,40 @@
         @RenderBody()
     </div>
 
+    <hr />
+    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">Album example</h1>
+                <p class="lead text-muted">
+
+                    Something short and leading about the collection below—its contents, the
+                    creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
+                    entirely.
+                </p>
+                <img src="/img/hardsrfc.jpg" id="bx_3218110189_26851" style="text-align:center; max-width: 100%;">
+                <p class="lead text-muted">
+                    Something short and leading about the collection below—its contents, the
+                    creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
+                    entirely.
+                </p>
+            </div>
+        </div>
+    </section>
+    <hr />
+
     <footer class="text-muted py-5">
         <div class="container">
             <p class="float-end mb-1">
                 <a href="#">Back to top</a>
             </p>
-            <p class="mb-1">Подпишитесь на наш инстаграм! Там мы регулярно выкладываем интересные работы</p>
+            @*<p class="mb-1">Подпишитесь на наш инстаграм! Там мы регулярно выкладываем интересные работы</p>
             <a href="https://www.instagram.com/bergwolfe_team/?hl=ru" class="soc" target="_blank">
                 <img src="~/img/insta.jpg" id="bx_3218110189_26851">
-            </a>
+            </a>*@
         </div>
     </footer>
-        
+
 
     <script src="~/js/bootstrap.min.js"></script>
 </body>
