--- a/Kurs/Views/Themes/List.cshtml
+++ b/Kurs/Views/Themes/List.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div align="center"><h1>Последние статьи</h1></div>
+<div align="center"><h1>Последние новости и недавние статьи</h1></div>
 
 
 <div  class="row mt-5 mb-2">
