Theme redirection added

--- a/Kurs/Views/Themes/List.cshtml
+++ b/Kurs/Views/Themes/List.cshtml
@@ -11,7 +11,7 @@
                 <h5>@theme.name</h5>
                 <p>@theme.shortDescription</p>
                 <p>@theme.level</p>
-                <p><a class="btn btn-warning" href="#">Читать</a></p>
+                <p><a class="btn btn-warning" href="/Theme/">Читать</a></p>
             </div>
         }
         
