--- a/Kurs/Views/Shared/_Layout.cshtml
+++ b/Kurs/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     <style>
         body {
             background-image: url("/img/background.jpg");
-            background-size: 100%;
             background-attachment: fixed;
             color: #f9fafb !important;
         }
@@ -21,6 +20,27 @@
         .text-muted {
             color: #ffffff !important;
         }
+        
+        hr:not([size]) {
+            height: 3px;
+            opacity: 0.65;
+        }
+
+        a {
+            color: #fcfdff;
+            text-decoration: underline;
+        }
+
+        .img-thumbnail {
+            padding: .05rem;
+            background-color: #ffffff;
+            border: 1px solid #ffffff;
+            border-radius: .95rem;
+            max-width: 100%;
+            height: auto;
+        }
+
+
 
     </style>
 
@@ -80,20 +100,6 @@
     </div>
 
     <hr />
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Album example</h1>
-                <p class="lead text-muted">
-                    Something short and leading about the collection below—its contents, the
-                    creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
-                    entirely.
-                </p>
-            </div>
-        </div>
-    </section>
-    <hr />
-
 
     <footer class="text-muted py-5">
         <div class="container">
