--- a/Kurs/Views/Home/Index.cshtml
+++ b/Kurs/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <h5>@theme.name</h5>
                 <p>@theme.shortDescription</p>
                 <p>@theme.level.Name</p>
-                <p><a class="btn btn-warning" href="Theme/Index">Читать</a></p>
+                <p><a class="btn btn-warning" href="Theme/Index?id=@theme.id">Читать</a></p>
             </div>
         }
 
