--- a/Kurs/Views/Home/Index.cshtml
+++ b/Kurs/Views/Home/Index.cshtml
@@ -1,4 +1,20 @@
-﻿
+﻿<hr />
+<section class="py-5 text-center container">
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">Немного о самом Blender</h1>
+            <p class="lead text-muted">
+                Blender — профессиональное cвободное и открытое программное обеспечение для создания трёхмерной компьютерной графики,
+                включающее в себя средства моделирования, скульптинга, анимации, симуляции, рендеринга,
+                постобработки и монтажа видео со звуком, компоновки с помощью «узлов» (Node Compositing),
+                а также создания 2D-анимаций. В настоящее время пользуется большой популярностью среди бесплатных 3D-редакторов
+                в связи с его быстрым стабильным развитием и технической поддержкой.
+            </p>
+        </div>
+    </div>
+</section>
+<hr />
+
 <div align="center"><h1>Последние статьи</h1></div>
 
 
@@ -8,10 +24,12 @@
         {
             <div class="col-lg-4">
                 <img class="img-thumbnail" src="@theme.img" alt="@theme.name" style="width:650px; height:400px;" />
-                <h5>@theme.name</h5>
-                <p>@theme.shortDescription</p>
-                <p>@theme.level.Name</p>
-                <p><a class="btn btn-warning" href="Theme/Index">Читать</a></p>
+                <div class="col-lg-4__text">
+                    <h5>@theme.name</h5>
+                    <p>@theme.shortDescription</p>
+                    <p>@theme.level.Name</p>
+                    <p><a class="btn btn-warning" href="Theme/Index?id=@theme.id">Читать</a></p>
+                </div>
             </div>
         }
 
