working on second page

--- a/Kurs/Views/Home/Index.cshtml
+++ b/Kurs/Views/Home/Index.cshtml
@@ -25,10 +25,10 @@
             <div class="col-lg-4">
                 <img class="img-thumbnail" src="@theme.img" alt="@theme.name" style="width:650px; height:400px;" />
                 <div class="col-lg-4__text">
-                    <h5>@theme.name</h5>
-                    <p>@theme.shortDescription</p>
-                    <p>@theme.level.Name</p>
-                    <p><a class="btn btn-warning" href="Theme/Index?id=@theme.id">Читать</a></p>
+                    <h5 class="text--card" >@theme.name</h5>
+                    <p  >@theme.shortDescription</p>
+                    <p  class="text--italic" >@theme.level.Name</p>
+                    <p><a class="btn btn-warning" href="Theme/Index?id=@theme.id ">Читать</a></p>
                 </div>
             </div>
         }
