--- a/Kurs/Views/Shared/_Layout.cshtml
+++ b/Kurs/Views/Shared/_Layout.cshtml
@@ -1,76 +1,13 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <style>
-        body {
-            background-image: url("/img/background.jpg");
-            background-attachment: fixed;
-            color: #f9fafb !important;
-        }
-
-        .fw-light {
-            font-weight: 600 !important;
-            color: white;
-        }
-
-        .text-muted {
-            color: #ffffff !important;
-        }
-        
-        hr:not([size]) {
-            height: 3px;
-            opacity: 0.65;
-        }
-
-        a {
-            color: #fcfdff;
-            text-decoration: underline;
-        }
-
-        .img-thumbnail {
-            padding: .05rem;
-            background-color: #000000;
-            border: 1px solid #000000;
-            border-radius: .95rem;
-            max-width: 100%;
-            height: auto;
-        }
-
-        .col-lg-4__text {
-            margin-top: 5px;
-            border: 1px solid #000000;
-            border-radius: .95rem;
-            background-color: #000000a3;
-            text-align: center;
-        }
-        .col-lg-4 {
-            margin-top: 40px;
-        }
-
-        .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-            margin-top: 10px;
-            margin-bottom: .5rem;
-            margin-left: 10px;
-            font-weight: 700;
-            line-height: 0.7;
-        }
-
-        .btn-warning {
-            color: #000;
-            background-color: #ffc10752;
-            border-color: #ff76008c;
-            border-width: thick;
-            border-radius: .80rem;
-            width: 300px;
-        }
-
-    </style>
-
+    <link href="~/css/StyleSheet.css" rel="stylesheet" type="text/css" />
+    
 </head>
+
 <body>
 
     <header>
