Html formatt added

--- a/Kurs/Views/Themes/Theme.cshtml
+++ b/Kurs/Views/Themes/Theme.cshtml
@@ -12,7 +12,7 @@
                 <img src="@Model.img" style="width:650px; height:400px;">
                 <hr />
                 <span class="text--theme">
-                    @Model.longDescription
+                    @Html.Raw(@Model.longDescription)
                 </span>
             </div>
         </div>
