db filling + other improvements

--- a/Kurs/Views/Shared/_Layout.cshtml
+++ b/Kurs/Views/Shared/_Layout.cshtml
@@ -30,10 +30,14 @@
         </div>
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container">
-                <a href="#" class="navbar-brand d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+                <a href="/Home" class="navbar-brand d-flex align-items-center">
+                    <img class="wolf-logo" src="/img/Wolf.png" alt="Wolf logo" />
                     <strong>Bergwolf3D</strong>
                 </a>
+                <a class="btn btn--choice" href="/Home/MasterThemes?levelID=4">Новости</a>
+                <a class="btn btn--choice" href="/Home/MasterThemes?levelID=3">Мастер</a>
+                <a class="btn btn--choice" href="/Home/MasterThemes?levelID=2">Любитель</a>
+                <a class="btn btn--choice" href="/Home/MasterThemes?levelID=1">Новичок</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -48,10 +52,10 @@
 
     <hr />
 
-    <footer class="text-muted py-5">
+    <footer class="text-muted py-5" style="background-color: #212529;">
         <div class="container">
-            <p class="float-end mb-1">
-                <a href="#">Back to top</a>
+            <p class="float-end mb-1" style="margin-right: -250px;">
+                <a href="">Back to top</a>
             </p>
         </div>
     </footer>
